# exosky-nasa-space-apps-2024

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  run.sh
exosky/: __init__.py  query.py  service.py  utils.py  vizualizer.py
research/: 00_explore_gaia.ipynb  01_explore_exoplanet_archive.ipynb  02_exoplanet_archive_astropy.ipynb
