[project]
name = "exosky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astroquery>=0.4.7",
    "tzwhere",
    "pytz",
    "numpy",
    "matplotlib",
    "skyfield",
    "geopy>=2.4.1",
    "pandas>=2.2.3",
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "flake8-pyproject>=1.2.3",
]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
